fixed: OC: form footer button misaligned in IE11,
https://github.com/kobotoolbox/enketo-express/issues/946

--- a/app/views/styles/component/_common-oc.scss
+++ b/app/views/styles/component/_common-oc.scss
@@ -75,3 +75,16 @@ $secondary-color: #eeeeee;
         }
     }
 }
+
+//IE11 fixes
+
+// Fix alignment of OC form footer buttons in IE11
+@media all and (-ms-high-contrast: none),
+(-ms-high-contrast: active) {
+    .form-footer__content__main-controls::before {
+        display: block;
+        content: ' ';
+        width: 100%;
+        height: 1px;
+    }
+}
